# gnss-time

./: .editorconfig  .gitignore  AUTHOR.md  CHANGELOG.md  Cargo.toml  LICENSE.MIT  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/workflows/: ci.yml  embedded.yml  publish.yml  semantic-pull-request.yml
bench/: Cargo.toml  README.md
bench/benches/: convert_bench.rs
benches/: README.md  arithmetic_bench.rs  convert_bench.rs  time_bench.rs
docs/: ARCHITECTURE.md  EMBEDDED.md  GNSS_TIME_PRIMER.md  INVARIANTS.md  LEAP_SECONDS.md  PROJECT_STRUCTURE.md  duration.txt  scale.txt  time.txt
examples/: README.md  basic_usage.rs  chain_conversion.rs  civil_time.rs  convert_basic.rs  convert_contextual.rs  display_formats.rs  dynamic_conversion.rs  embedded_safe_arithmetic.rs  glonass_day_tod.rs  glonass_receiver.rs  gps_time_operations.rs  gps_week_tow.rs  log_stream.rs  matrix_inspection.rs  multi_constellation.rs  no_domain_mixing.rs  no_std_example.rs  receiver_timestamp.rs  scale_conversion.rs  sync_alignment.rs  unix_time.rs
src/: civil.rs  convert.rs  duration.rs  epoch.rs  error.rs  leap.rs  lib.rs  matrix.rs  prelude.rs  scale.rs  serde_impls.rs  time.rs
src/tables/: leap_seconds.rs  mod.rs
tests/: glonass_test.rs  no_std_compact.rs  prop_deterministic.rs  prop_tests.rs  roundtrip_test.rs  serde_test.rs  time_integration_test.rs
