[package]
name = "gnss-time"
version = "0.4.0"
edition = "2021"
description = "Type-safe GNSS time scales: GPS, GLONASS, Galileo, BeiDou, TAI, UTC — no_std by default"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MiCkEyZzZ/gnss-time"
homepage = "https://github.com/MiCkEyZzZ/gnss-time"
documentation = "https://docs.rs/gnss-time"
readme = "README.md"
keywords = ["glonass", "gnss", "gps", "time", "no-std", "embedded"]
categories = ["no-std", "science", "date-and-time"]
authors = ["<zedmfix@gmail.com>"]

# Minimum supported Rust version
rust-version = "1.75"

# List of files included in the crates.io package (excludes dev files)
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE.MIT",
    "LICENSE.APACHE",
]

[features]
# Default feature set is empty.
# The crate compiles in no_std environments with no flags enabled.
default = []

# std: adds impl std::error::Error for GnssTimeError.
# Only needed if the consumer uses Box<dyn Error> or anyhow.
# Do NOT enable for embedded builds!
std = []

# defmt: adds impl defmt::Format for all public types.
# Used for structured logging via probe-rs / defmt-rtt.
#
# Usage in Cargo.toml:
#   [dependencies]
#   gnss-time = { version = "0.4", features = ["defmt"] }
#   defmt     = "0.3"
#
# defmt versions: https://crates.io/crates/defmt
defmt = ["dep:defmt"]

[dependencies]
# defmt — optional dependency for embedded logging.
# Enabled via features = ["defmt"].
# Pinned to 0.3 for compatibility with defmt-rtt 0.4+.
defmt = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.8.0"

[[bench]]
name = "time_bench"
path = "benches/time_bench.rs"
harness = false

[[bench]]
name = "arithmetic_bench"
path = "benches/arithmetic_bench.rs"
harness = false

[[bench]]
name = "convert_bench"
path = "benches/convert_bench.rs"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "gps_week_tow"
path = "examples/gps_week_tow.rs"

[[example]]
name = "glonass_day_tod"
path = "examples/glonass_day_tod.rs"

[[example]]
name = "scale_conversion"
path = "examples/scale_conversion.rs"

[[example]]
name = "display_formats"
path = "examples/display_formats.rs"

[[example]]
name = "convert_basic"
path = "examples/convert_basic.rs"

[[example]]
name = "convert_contextual"
path = "examples/convert_contextual.rs"

[[example]]
name = "matrix_inspection"
path = "examples/matrix_inspection.rs"

[package.metadata.docs.rs]
# docs.rs builds with features = ["std", "defmt"] to expose full API
features = ["std", "defmt"]
# Targets for documentation builds
targets = ["x86_64-unknown-linux-gnu", "thumbv7em-none-eabihf"]
